Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21586

Particles example launcher crashes

    XMLWordPrintable

Details

    • 9fde7c1723c316a4207ef28e12744c260c883071

    Description

      When you try to leave an example in the Particle examples launcher, the entire launcher crashes in the QSGImageParticle destructor as it tries to destroy the QSGMaterial in the main thread.

      Attachments

        For Gerrit Dashboard: QTBUG-21586
        # Subject Branch Project Status CR V

        Activity

          People

            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes