Stop managing lifetime of material

Let scenegraph handle it in its own thread.

Task-number: QTBUG-21586
Change-Id: I5affcec4abbc79fff0c60e740d2c1cf04e3385f2
Reviewed-on: http://codereview.qt-project.org/5345
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Gunnar Sletta <gunnar.sletta@nokia.com>